--- a/src/css/style.css
+++ b/src/css/style.css
@@ -213,3 +213,40 @@ a:hover {
       grid-area: nutrition;
       padding: 10px;
     }
+
+    .alert {
+      /* display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.5em;
+      background-color: var(--tertiary-color);
+      border: 1px solid darkorange; */
+      /* display: flex;
+      align-items: center;
+      justify-content: space-between; 
+      background: var(--tertiary-color);*/
+      padding: 20px 40px;
+      min-width: 420px;
+      position: absolute;
+      right: 0px;
+      top: 10px;
+      border-radius: 4px;
+      border-left: 8px solid darkorange;
+    }
+    
+    .alert > p {
+      margin: 0;
+    }
+    .alert span{
+      cursor: pointer;
+      position: absolute;
+      right: 0px;
+      top: 50%;
+      transform: translateY(-50%);
+      background: var(--light-text);
+      padding: 20px 18px;
+    }
+
+    .alert span:hover{
+      background-color: var(--primary-color);
+    }
