Added search by name

--- a/src/public/partials/complexForm.html
+++ b/src/public/partials/complexForm.html
@@ -2,7 +2,7 @@
     <label for="name">Recipe name</label>
     <input id="name" type="text" required>
   </fieldset>
-  <fieldset>
+  <fieldset id="complexSearch">
     <h3>Detailed Search</h3>
     <label for="maxReadyTime">MaxReadyTime (minutes): </label>
     <input name="maxReadyTime" id="maxReadyTime" type="number" min="0" max="100">
