--- a/src/public/partials/ingredientsForm.html
+++ b/src/public/partials/ingredientsForm.html
@@ -1,5 +1,6 @@
-<div class="instructions">
+<fieldset class="instructions">
     <p>Please, add a comma-separated list of ingredients that the recipes 
     should contain</p></div>
     <input type="text" placeholder="apple,banana,cinnamon">
     <button class="search-btn">Search</button>
+</fieldset>
