--- a/src/css/style.css
+++ b/src/css/style.css
@@ -182,7 +182,7 @@ a:hover {
       "title title img img"
       "details ingredients ingredients ingredients"
       "details instructions instructions instructions"
-      ". . . buttons"
+      ". buttons buttons buttons"
       "nutrition nutrition nutrition nutrition";
       background-color: var(--light-text)
     }
@@ -274,4 +274,40 @@ a:hover {
       padding: 0.5em;
       border: 1px solid var(--primary-color);
       max-width: 250px;
+    }
+
+    input:invalid {
+      border: 2px dashed red;
+    }
+    #img_container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      justify-content: center;
+    }
+
+    #img_container img {
+      cursor: pointer;
+      margin: auto;
+      width: 60%;
+      display: block;
+    }
+
+    #img_container h3{
+      text-align: center;
+    }
+
+    .grow {
+      z-index: 20;
+      animation: grow 2s;
+    }
+
+    @keyframes grow {
+      0% { transform: scale(1); }
+      75% { transform: scale(1.5); }
+      90% { transform: scale(0.6); }
+      93% { transform: scale(1.5); }
+      95% { transform: scale(2.5); }
+      97% { transform: scale(1.3); }
+      100% { transform: scale(1); }
     }
