--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -3,7 +3,7 @@
     <h1>Nutry App</h1>
   </div>
   <ul>
-    <li><a href="../index.html">Home</a></li>
+    <li><a href="../index.html">Search</a></li>
     <li><a href="../recipeBook/index.html">Recipe Book</a></li>
   </ul>
 <div id="logging"><a>Log out</a></div>
